components/apps/wger/wger-postgres-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wger-postgres
  namespace: wger
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
