components/apps/wger/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wger
  namespace: wger
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`wger.redcomet.ca`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: wger-http
      port: 8000
